--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "type": "git",
     "url": "https://bitbucket.org/falconi/falconi-com"
   },
+  "engines": {
+    "node": "7.10.0"
+  },
   "scripts": {
     "cleancache": "rm -rf node_modules/.cache/babel-loader",
     "dev": "npm run cleancache && next",
@@ -25,18 +28,18 @@
     "babel-plugin-transform-define": "^1.3.0",
     "babel-plugin-wrap-in-js": "^1.1.0",
     "glob": "7.1.1",
-    "next": "^2.3.1",
+    "next": "^2.4.9",
     "node-sass": "^4.4.0",
     "postcss-easy-import": "2.0.0",
     "postcss-loader": "1.3.3",
     "prop-types": "^15.5.10",
     "raw-loader": "^0.5.1",
-    "react": "^15.5.4",
+    "react": "^15.6.1",
     "react-cookies": "^0.1.0",
-    "react-dom": "^15.5.4",
+    "react-dom": "^15.6.1",
     "react-facebook-pixel": "^0.1.0",
-    "react-scroll": "^1.5.2",
-    "react-scrollspy": "^3.2.0",
+    "react-scroll": "^1.5.4",
+    "react-scrollspy": "^3.3.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1"
   }
