--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.org/falconi/falconi"
+    "url": "https://github.org/falcon1812/falconi"
   },
   "engines": {
     "node": "7.10.0",
