--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "scripts": {
     "cleancache": "rm -rf node_modules/.cache/babel-loader",
-    "dev": "npm run cleancache && next -p 80",
-    "build": "npm run cleancache && next build -p 80",
-    "start": "npm run cleancache && next start",
-    "heroku-postbuild": "next build"
+    "dev": "npm run cleancache && next",
+    "build": "npm run cleancache && next build",
+    "start": "npm run cleancache && next start -p 8080",
+    "heroku-postbuild": "next build -p 8080"
   },
   "keywords": [
     "Next.js",
