Send build events to Atomist.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,11 @@ install:
   - yarn build
 notifications:
   email: false
+  webhooks:
+    urls:
+    - 'https://webhook.atomist.com/travis'
+    on_cancel: always
+    on_error: always
+    on_start: always
+    on_failure: always
+    on_success: always
