--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-transform-define": "^1.3.0",
     "babel-plugin-wrap-in-js": "^1.1.0",
     "glob": "7.1.1",
+    "i18next": "^9.0.1",
     "next": "^2.4.9",
     "node-sass": "^4.4.0",
     "postcss-easy-import": "2.0.0",
@@ -40,6 +41,7 @@
     "react-cookies": "^0.1.0",
     "react-dom": "^15.6.1",
     "react-facebook-pixel": "^0.1.0",
+    "react-i18next": "^6.0.5",
     "react-scroll": "^1.5.4",
     "react-scrollspy": "^3.3.3",
     "stylus": "^0.54.5",
